# kabu_per_bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile.job  Procfile  README.md  firestore.indexes.json  pyproject.toml
docs/: BOTコア実行手順.md  Firestoreスキーマ設計.md  MVP仕様分解_受け入れ基準.md  MVP残タスク一覧.md  README.md  Web_E2Eテストとステージング反映手順.md  Web実装タスク_Issue一覧.md  Web管理画面_仕様（画面一覧・API一覧）.md  トレーダー向け_使い方手順書.md  実装タスク_Issue一覧.md  技術スタック定義.md  日常運用コマンド一覧.md  要件定義書最終盤.md  運用開始チェックリスト.md
scripts/: migrate_firestore_v0001.py  migrate_firestore_v0002_technical_indicators.py  migrate_firestore_v0003_technical_profiles.py  preflight_deploy_check.sh  run_backfill_daily_metrics.py  run_baseline_research_job.py  run_daily_job.py  run_earnings_job.py  run_immediate_window_job.py  run_incremental_backfill_job.py  run_intelligence_job.py  run_technical_daily_job.py  run_technical_full_refresh_job.py  run_technical_price_sync.py  run_technical_profile_auto_assign_job.py  run_web_test_api.py  send_discord_test_notification.py  setup_scheduler.sh
tests/: test_admin_ops_service.py  test_api_admin_ops.py  test_api_admin_settings.py  test_api_dashboard_history_logs.py  test_api_technical_profiles.py  test_api_watchlist.py  test_backfill.py  test_backfill_service.py  test_baseline_research_service.py  test_committee_engine.py  test_committee_pipeline.py  test_discord_notifier.py  test_earnings.py  test_firestore_baseline_research_repository.py  test_firestore_global_settings_repository.py  test_firestore_intel_seen_repository.py  test_firestore_metric_repositories.py  test_firestore_migration.py  (+40 more)
(+177 files in other folders)
