[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kabu-per-bot"
version = "0.1.0"
description = "Stock watch bot for PER/PSR notifications"
requires-python = ">=3.12"

[project.optional-dependencies]
gcp = ["google-cloud-firestore>=2.16.0"]

[tool.setuptools.packages.find]
where = ["src"]
